[package]
name = "fpng-rs"
version = "1.0.9"
edition = "2021"
description = "safe fpng bindings"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/fpng-rs"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]

[dependencies]
cty = "0.2.2"
thiserror = "1.0.31"
bitflags = "1.3.2"

[build-dependencies]
cc = "1.0.73"
bindgen = { version = "0.60.1", optional = true }

[features]
internal-bindgen-on-build = ["bindgen"]